Prevent prettier from wrapping jsx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,8 @@
                 "endOfLine": "auto",
                 "useTabs:": true,
                 "quoteProps": "consistent",
-                "arrowParens": "avoid"
+                "arrowParens": "avoid",
+                "printWidth": 120
             }
         ]
     }
